# Testing

./: .env.example  .gitignore  .pre-commit-config.yaml  Report.md  Report.txt  pyproject.toml  run_mobile.sh  run_web.sh
tests/: conftest.py
tests/mobile/: adb_utils.py  config.py  conftest.py  helper.py  run.sh
tests/mobile/pages/: base_page.py  login_page.py
tests/mobile/pages/components/: bottom_nav_component.py  post_job.py  sidebar_component.py
tests/mobile/pages/screens/: home_page.py  jobs_page.py  my_network_page.py
tests/mobile/pages/screens/auth/: forgot_password_page.py  landing_page.py  login_page.py  register_page.py
tests/mobile/pages/screens/settings/: change_password_page.py  connections_page.py  settings_page.py
tests/mobile/tests/: test_change_password.py  test_connections.py  test_forgot_password.py  test_invitations.py  test_jobs.py  test_login.py  test_register.py
tests/web/: config.py  conftest.py
tests/web/pages/: base_page.py  change_email_page.py  change_password_page.py  connection_page.py  create_post_page.py  home_page.py  login_page.py  post_page.py  profile_page.py  signup_page.py  user_details_page.py
tests/web/tests/: test_change_email.py  test_change_password.py  test_connection.py  test_create_post.py  test_home_page.py  test_login.py  test_post.py  test_profile.py  test_signout.py  test_signup.py  test_user_details.py  xtest_change_password.py
